better mock code implementation to replace faker
TMap[string,T] to TMap[K,V]
optimize src/file
skip verify ssl https