@@ -5,12 +5,6 @@ import (
 	"io"
 )
 
-func Export[T comparable](data any) (e *Excel[T], err error) {
-	e = NewExcel[T]()
-	err = e.Export(data)
-	return
-}
-
 // Import excel data
 // support type: string, int, int64, uint, float64
 // if you want to handle imported data, please implement Handle interface
@@ -19,4 +13,16 @@ func Import[T comparable](r io.Reader, opts ...excelize.Options) (datas []*T, er
 	e := NewExcel[T]()
 	err, datas = e.Import(r)
 	return
+}
+
+// Export excel data
+func Export[T comparable](data any) (e *Excel[T], err error) {
+	e = NewExcel[T]()
+	err = e.Export(data)
+	return
+}
+
+// ExportZip export excel data to zip
+func ExportZip[T comparable](dst io.Writer, excels []*Excel[T]) error {
+	return exportZip(dst, excels)
 }
